--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body::after {
 }
 
 .logo img {
-    width: 120px; /* tamanho da logo central */
+    width: 120px;
     height: 120px;
     border-radius: 50%;
     background: #f4f7fb;
@@ -65,8 +65,6 @@ body::after {
     object-fit: cover;
     display: block;
 }
-
-/* Removido: .logo .aqua e .logo .gas */
 
 h2, .sistema-title {
     color: #212529;
